0.10.4 (2015-03-10)
-------------------

- Fix error in "swb" model for soil water balance.
- Fix an error message in vaporize.

0.10.3 (2015-02-17)
-------------------

- Improvements in "swb" module for soil water balance.
- Better "no data" value in rasters.

0.10.2 (2015-02-15)
-------------------

- Can now calculate daily evaporation in addition to hourly.
- "spatial" now properly sets no data value in rasters.

0.10.1 (2015-01-30)
-------------------

- Minor bug fix: spatial.extract_point_from_raster now raises
  exception on error.

0.10.0 (2014-12-29)
-------------------

- Added "evaporation" module, which calculates evaporation, and
  related "vaporize" command line application.
- Added "swb" module, which determines irrigation needs based on soil
  water balance.
- Improvement in API of cliapp.
- timeseries.datetime_from_iso() is now deprecated; use the "iso8601"
  module instead. timeseries.datetime_from_iso() will be removed in
  version 1.0.
- Fordonia, bitia and pond have been renamed to aggregate, spatialize,
  and enhydris_cache.
- Aggregate (formerly fordonia) and spatialize (formerly bitia) now
  store the time zone in their output files (if it has been specified
  in their input).
- Spatialize (formerly bitia) can now use seasonal albedo, and it now
  also recalculates already existing output if in the meantime more
  data has become available. Several bugs have also been corrected.
- Experimental Mac OS X support.

0.9.1 (2014-06-16)
------------------

- Fixed installation bug which made it necessary to install requests
  before installing pthelma.

0.9.0 (2014-06-16)
------------------

- New application Pond performs local filesystem caching of Enhydris
  data.

- Bitia no longer puts date in output filename, but as a field in the
  file instead; the file is named filename_prefix-XXXX.tif, where XXXX
  is a number from 0 (for most recent) to files_to_produce.

- Bitia now works locally, without communicating with Enhydris; Pond