@@ -1,3 +1,9 @@
+dev
+---
+
+- Fix error in the handling of 'missing_allowed' when aggregating time
+  series.
+
 0.10.4 (2015-03-10)
 -------------------
 
